- diskdrake:
  o fix mnt point for FAT partitions on GTP (mga#15987)
  o set the proper GUID for FAT partitions on GPT
- drakboot:
  o do not detect grub2 on UEFI when there's no bootloader
  o fix default grub2 kernel parameters (mga#15984)

Version 16.98 - 19 May 2015

- all tools:
  o fix banner icon being cliped (mga#12358)
- drakfont:
  o fix crash (mga#13627)
  o fix crash with --windows_import (mga9347)
  o fix an error with --testing (mga#13363)
- localedrake:
  o don't try to install non existant scim-googlepinyin (mga#6681)

Version 16.97 - 18 May 2015

- library (for draklive-install):
  o enables to get raw available space (mga15257)

Version 16.96 - 17 May 2015

- library (for draklive-install):
  o fix regression refusing FAT for ESP (mga#15962)

Version 16.95 - 14 May 2015

- library (for draklive-install):
  o fix a crash after "insufficient space" error (mga#15919)
- diskdrake:
  o fix a gtk+3 regression crash with --dav (mga#13204)

Version 16.93 - 9 May 2015

- drakboot:
  o do use vga value for grub2
  o fix setting default grub2 entry

Version 16.92 - 9 May 2015

- drakx-net:
  o recognize r8723bs (mga#15874)
- diskdrake:
  o do not set noauto for /boot/EFI (mga#15627)
- drakboot:
  o backup grub2 files before configuring
- harddrake:
  o fix detecting AHCI as SATA (mga#9992)
  o fix detecting some memory chips (mga#5810)
  o fix not listing uvccideo managed devices as wecams (mga#9992)

Version 16.90 - 28 April 2015

- localedrake:
  o write input methods to /etc/locale.conf (mga#15464)
- run vgchange before updating the list of LVMs, not after, and even if not
  in install (should help with mga#7578).

Version 16.89 - 25 April 2015

- Ignore special partitions on mmc (mga#15759)

Version 16.88 - 25 April 2015

- ensure country/timezone locale is kept when removing unused locale
  packages (mga#3723)

Version 16.87 - 22 April 2015

- partitioning_wizard:
  o improve the display box (mga#15728)

Version 16.86 - 20 April 2015

- bootloader: