@@ -131,6 +131,12 @@ sub read_one {
 	    $_->{pt_type} = 0x12;
         }
         $_->{fs_type} = $parted_mapping{$_->{fs_type}} if $parted_mapping{$_->{fs_type}};
+
+        # compatibility with MBR partitions tables:
+        $_->{pt_type} = 0x82 if $_->{fs_type} eq 'swap';
+        $_->{pt_type} = 0x0b if $_->{fs_type} eq 'vfat';
+        $_->{pt_type} = 0x83 if $_->{fs_type} =~ /^ext/;
+
         @pt[$_->{part_number}-1] = $_;
     }
 
