@@ -1,4 +1,5 @@
 - bootloader:
+  o display cosmetics when reading back GPT partitions
   o do not detect grub2 on UEFI when there's no bootloader
   o fix default grub2 kernel parameters (mga#15984)
 - partitioning:
