@@ -1,4 +1,5 @@
 - diskdrake:
+  o display cosmetics when reading back GPT partitions
   o fix mnt point for FAT partitions on GTP (mga#15987)
   o set the proper GUID for FAT partitions on GPT
 - drakboot:
